--- a/ReadMe
+++ b/ReadMe
@@ -1,65 +1,12 @@
-# Snake Game
+Snake Game
 
-The old-fashioned snake game, which came with every brick phone.
-
-This project is from the bootcamp course 100 Days of Python Code, created by the App Brewery.
-
-## Table of Contents
-1. [Description](#description)
-2. [Installation](#installation)
-3. [Usage](#usage)
-4. [Improvements](#improvements)
-5. [License](#license)
-
-## Description
+Description
 This is a recreation of the classic Snake game using Python's Turtle graphics module. The objective is to control a snake to eat food, which makes the snake grow longer. The game ends when the snake collides with itself or the wall.
 
 ## Installation
 1. Clone the repository:
     ```sh
-    git clone https://github.com/yourusername/snake-game.git
-    ```
-2. Navigate to the project directory:
-    ```sh
-    cd snake-game
-    ```
-3. Install the required dependencies:
-    ```sh
-    pip install -r requirements.txt
-    ```
-
-## Usage
-To start the game, run the main script:
-```sh
-python main.py
-
-
-
-ChatGPT
-Here is a more integrated and structured README.md file that includes the usage instructions and the potential improvements within the appropriate sections:
-
-markdown
-Copy code
-# Snake Game
-
-The old-fashioned snake game, which came with every brick phone.
-
-This project is from the bootcamp course 100 Days of Python Code, created by the App Brewery.
-
-## Table of Contents
-1. [Description](#description)
-2. [Installation](#installation)
-3. [Usage](#usage)
-4. [Controls](#controls)
-5. [Improvements](#improvements)
-
-## Description
-This is a recreation of the classic Snake game using Python's Turtle graphics module. The objective is to control a snake to eat food, which makes the snake grow longer. The game ends when the snake collides with itself or the wall.
-
-## Installation
-1. Clone the repository:
-    ```sh
-    git clone https://github.com/yourusername/snake-game.git
+    git clone https://github.com/connorbrown2023/Snake_Game.git
     ```
 2. Navigate to the project directory:
     ```sh
