I have finished the game there are some bugs e.g.the score doesnt look right before the first point and there could be further improvements with things like "Keeping track of the highest score. Adding levels with increasing difficulty. Introducing obstacles that the snake must avoid. Adding sound effects and background music."

--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
-Snake Game
+#Snake Game
 
 Description
 This is a recreation of the classic Snake game using Python's Turtle graphics module. The objective is to control a snake to eat food, which makes the snake grow longer. The game ends when the snake collides with itself or the wall.
